changed to named colors

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 body {
   font-family: "Merriweather", serif;
   margin: 20px;
-  background-color: #e0e0e0;
+  background-color: lightgray;
 }
 
 h1 {
   color: #fff;
   font-size: 2em;
-  background-color: #1a237e;
+  background-color: darkblue;
   padding: 10px;
 }
 
@@ -21,22 +21,22 @@ h1 {
 
 #cssTable th,
 #cssTable td {
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid gray;
   padding: 14px 16px;
 }
 
 #cssTable th {
-  background-color: #1a237e;
+  background-color: darkblue;
 
   color: white;
 }
 
 #cssTable tr:nth-child(even) {
-  background-color: #c2c2c2;
+  background-color: darkgrey;
 }
 
 #cssTable tr:hover {
-  background-color: #64b5f6;
+  background-color: cornflowerblue;
   color: #fff;
 }
 
